# slowroll

./: .vars.ini  MANIFEST.in  Makefile  README.md  requirements-dev.txt  setup.cfg
.github/workflows/: build.yml
slowroll/: __init__.py  api.py  isoformat.py  time_delta_str.py
slowroll/tests/: __init__.py  __main__.py  api.py  time_delta_str.py
